--- a/public/app/index.html
+++ b/public/app/index.html
@@ -15,7 +15,7 @@
     <!--endinject-->
 </head>
 <body>
-    <div class="container-fluid" ng-app="Songs">
+    <div class="container-fluid" ng-app="Songs" ng-controller="GeneralController">
         <header>
             <div class="row border-top">
                 <div class="col-xs-11 col-xs-offset-1 col-md-6 col-md-push-6 col-sm-6 col-sm-push-4">
@@ -29,8 +29,8 @@
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                     <div class="search-container">
-                        <input type="text" placeholder="Search Music"/>
-                        <span class="fa fa-search icon-search"></span>
+                        <input id="txtSearch" type="text" placeholder="Search Music" ng-enter="search()"/>
+                        <span class="fa fa-search icon-search cursor-pointer" ng-click="search()"></span>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,9 @@
     <!--inject:js-->
     <script src="scripts/app.js"></script>
     <script src="scripts/directives/listSongs.js"></script>
+    <script src="scripts/directives/ngEnter.js"></script>
     <script src="scripts/services/SongsService.js"></script>
+    <script src="scripts/controllers/GeneralController.js"></script>
     <!--endbower-->
 </body>
 </html>
