--- a/public/app/index.html
+++ b/public/app/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid" ng-app="Songs" ng-controller="GeneralController">
         <header>
             <div class="row border-top">
-                <div class="col-xs-11 col-xs-offset-1 col-md-6 col-md-push-6 col-sm-6 col-sm-push-4">
+                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-push-6 col-sm-6 col-sm-push-4">
                     <span class="options-header">Now Playing</span>
                     <span class="options-header">Rate Songs</span>
                 </div>
@@ -27,16 +27,16 @@
         </header>
         <section>
             <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
                     <div class="search-container">
                         <input id="txtSearch" type="text" placeholder="Search Music" ng-enter="search()"/>
                         <span class="fa fa-search icon-search cursor-pointer" ng-click="search()"></span>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                    <div class="row">
+            <div class="table-container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <list-songs></list-songs>
                     </div>
                 </div>
@@ -44,10 +44,10 @@
         </section>
         <footer>
             <div class="row">
-                <div class="col-xs-6 text-center">
-                    <span>2011 The Hangar Interactive. All rights reserved.</span>
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
+                    <span>© 2011 The Hangar Interactive. All rights reserved.</span>
                 </div>
-                <div class="col-xs-6 text-center">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                     <span>Privacy Policy</span>
                     <span class="borders">Terms of Use</span>
                     <span>Contact Us</span>
@@ -69,7 +69,6 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/directives/listSongs.js"></script>
     <script src="scripts/directives/ngEnter.js"></script>
-    <script src="scripts/services/SongsService.js"></script>
     <script src="scripts/controllers/GeneralController.js"></script>
     <!--endbower-->
 </body>
