--- a/public/app/index.html
+++ b/public/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>HANGAR O'CLOCK SONG</title>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.css" />
     <!--bower:css-->
@@ -19,24 +19,29 @@
         <header>
             <div class="row border-top">
                 <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-push-6 col-sm-6 col-sm-push-4">
-                    <span class="options-header">Now Playing</span>
-                    <span class="options-header">Rate Songs</span>
+                    <span class="options-header" translate="NOW_PLAYING"></span>
+                    <span class="options-header" translate="RATE_SONGS"></span>
                 </div>
             </div>
-            <h1 class="text-center font-title">HANGAR O'CLOCK SONGS</h1>
+            <div class="row text-center">
+                <div class="col-xs-12 col-md-6 col-md-offset-3">
+                    <img src="img/Logo.png" alt="The Hangar Logo" width="81" height="70" class="display-inlineblock"/>
+                    <h1 class="font-title display-inlineblock">HANGAR O'CLOCK SONGS</h1>
+                </div>
+            </div>
         </header>
         <section>
             <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
+                <div class="col-xs-12 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
                     <div class="search-container">
-                        <input id="txtSearch" type="text" placeholder="Search Music" ng-enter="search()"/>
+                        <input id="txtSearch" type="text" placeholder="{{ 'SEARCH_MUSIC' | translate}}" ng-enter="search()"/>
                         <span class="fa fa-search icon-search cursor-pointer" ng-click="search()"></span>
                     </div>
                 </div>
             </div>
             <div class="table-container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+                    <div class="col-xs-12 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
                         <list-songs></list-songs>
                     </div>
                 </div>
@@ -48,9 +53,9 @@
                     <span>© 2011 The Hangar Interactive. All rights reserved.</span>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
-                    <span>Privacy Policy</span>
-                    <span class="borders">Terms of Use</span>
-                    <span>Contact Us</span>
+                    <span translate="PRIVACY_POLICY"></span>
+                    <span translate="TERMS_USE" class="borders"></span>
+                    <span translate="CONTACT_US"></span>
                 </div>
             </div>
         </footer>
